@@ -5,3 +5,6 @@
 // LDAP for managing with ldap
 // NIS not implemented
 $sys_account_manager_type='{sys_account_manager_type}';
+
+// email address to send admin alerts to
+$sys_admin_email = 'gforge@my.domain';
